# fastapi-sqlmodel-heroes

./: LICENSE  README.md  api.env  db.env  docker-compose.yml
smp-api/: .dockerignore  Dockerfile  README.md  pyproject.toml
smp-api/app/: db.py  init.py  main.py
smp-api/app/api/: __init__.py  books.py  files.py  heroes.py  readers.py  students.py  teams.py  tutorials.py
smp-api/app/core/: __init__.py  app.py  db.py  mgdb.py  mongo.py  mydb.py
smp-api/app/models/: __init__.py  hero.py.bak  joined.py  student.py  team.py.bak
smp-api/notebooks/: models.ipynb
smp-api/tests/: hero_test.py  main_test.py  team_test.py
smp-db/: README.md
smp-mongo/: README.md
smp-web/: README.md
